нужна правка в жидкой базе